Se identan y comentan los distintos modulos incluyendo su .html, .scss y .ts

--- a/pika-trading-frontend/src/index.html
+++ b/pika-trading-frontend/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Metadatos esenciales -->
   <meta charset="utf-8">
-  <title>PikaTradingFrontend</title>
-  <base href="/">
+  <title>PikaTradingFrontend</title> <!-- Título de la pestaña del navegador -->
+  <base href="/"> <!-- Base para rutas relativas en Angular -->
+
+  <!-- Configuración de la vista para dispositivos móviles -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Ícono de la página (favicon) -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Fuente de íconos (Font Awesome) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <!-- Punto de entrada de la aplicación Angular -->
   <app-root></app-root>
 </body>
 </html>
+
